[gd_scene load_steps=6 format=2]

[ext_resource path="res://Balls/Ball.gd" type="Script" id=1]
[ext_resource path="res://Balls/assets/ball_fill_0.png" type="Texture" id=2]
[ext_resource path="res://Balls/assets/ball_fill_1.png" type="Texture" id=3]
[ext_resource path="res://Balls/assets/ball_edge.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 31.0

[node name="Ball" type="Area2D"]
script = ExtResource( 1 )
fill_color_0 = Color( 0.207843, 0.690196, 0.92549, 1 )
fill_color_1 = Color( 0.533333, 0.894118, 0.34902, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Fill0" type="Sprite" parent="Sprites"]
modulate = Color( 0.207843, 0.690196, 0.92549, 1 )
texture = ExtResource( 2 )

[node name="Fill1" type="Sprite" parent="Sprites"]
modulate = Color( 0.533333, 0.894118, 0.34902, 1 )
texture = ExtResource( 3 )

[node name="Edge" type="Sprite" parent="Sprites"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Base_mouse_entered"]
